fixed chat zoom and message spacing

--- a/static/style.css
+++ b/static/style.css
@@ -289,7 +289,7 @@ label{
 
     flex-direction:column;
 
-    gap:20px;
+    gap:14px;
 
     scroll-behavior:smooth;
 
@@ -299,7 +299,7 @@ label{
 /* COMMON MESSAGE */
 
 .message{
-    max-width:220px;
+    max-width:200px;
 
     padding:10px 14px;
 
